<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">安全鞋垫</string>
    <string name="Sign_out">"程序后台运行中\n断开连接后退出"</string>
    <string name="device">Device:</string>
    <string name="no_device">没有找到任何设备，请重试！</string>
    <string name="select_device">请选择一个设备</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">扫描中...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">断开</string>
    <string name="connect">连接</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">扫描</string>
    <string name="cancel">取消</string>
    <string name="about_smart_lock">关于安全鞋垫</string>
    <string name="connect_bluetooth">连接设备</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bluetooth_close">" 蓝牙：未打开"</string>
    <string name="bluetooth_open">" 蓝牙：已打开"</string>
    <string name="setting">设置</string>
    <string name="bluetooth_name">" 设备："</string>
    <string name="battery">" 电量：空"</string>
    <string name="fullBattery">" 电量：100%"</string>
    <string name="battery_value">" 电量："</string>
    <string name="rssi">" Rssi："</string>
    <string name="rssi_null">" Rssi：空"</string>
    <string name="open_door">打 开</string>
    <string name="close_door">关 闭</string>
    <string name="no_bt">" 设备：空"</string>
    <string name="title_activity_my_phone_card">MyPhoneCardActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="set_height">输入身高</string>
    <string name="set_weight">输入体重</string>
    <string name="autoConnect">自动连接</string>
    <string name="choose_gender">选择性别</string>
    <string name="title_activity_choose">Choose</string>
    <string name="title_activity_input">Input</string>
    <string name="title_activity_about_sl">AboutActivity</string>
    <string name="about_sl">\t\t“安全鞋垫”是由低功耗蓝牙芯片、加速度传感器、压力传感器、安卓手机客户端等组成的智能报警系统。主要有计步、安全报警、跌倒报警三大功能。\n\t\t①计步：连接BLE设备后，会自动获取计步信息，并根据使用者设置的个人信息计算消耗的卡路里。\n\t\t②安全报警：安全开关打开后，使用者遇到危险时，可以脚趾使劲按压鞋垫3秒钟触发报警，手机会自动获取位置和预设短信信息延时10秒后报警。同时手机产生震动提示使用者，此时使用者可选择取消报警。\n\t\t③跌倒报警：跌倒开关打开后，使用者跌倒时，手机会自动获取位置和预设短信信息延时10秒后报警。同时手机产生震动提示使用者，此时使用者可选择取消报警。</string>
    <string name="isAutoConnect">否</string>
    <string name="sure">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="input_is_null">输入不能为空！</string>
    <string name="bt_disconnect">设备已断开</string>
    <string name="not_found">未找到上次连接设备</string>
    <string name="auto_connect_not_success">自动连接设备未成功</string>
    <string name="auto_success">已自动连接上次连接设备</string>
    <string name="tryReconnet">正在尝试重新连接</string>
    <string name="request_not_success">请求发送失败</string>
    <string name="bt_initialize_fail">蓝牙初始化失败</string>
    <string name="start">现在开始</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="personalSet">个人设置</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="safeSwitch">安全开关</string>
    <string name="fallSwitch">跌倒开关</string>
    <string name="step">步数</string>
    <string name="distance">距离</string>
    <string name="calorie">卡路里</string>
    <string name="close">关</string>
    <string name="open">开</string>
    <string name="title_activity_warning_set">WarningSetActivity</string>
    <string name="safeSet">安全设置</string>
    <string name="fallSet">跌倒设置</string>
    <string name="mySwitch">开关</string>
    <string name="phone">手机号码</string>
    <string name="message">短信内容</string>
    <string name="helpMessage">警察同志，我遇到了紧急情况！</string>
    <string name="helpPhone">12110</string>
    <string name="fallWarning">跌倒报警</string>
    <string name="safeWarning">安全报警</string>
    <string name="messageHasSend">\n短信已发送</string>
    <string name="countTime">倒计时\n</string>
    <string name="second">秒</string>
    <string name="baiduKey">53351EE4BDE7BD870F41A0B4AF1480F1CA97DAF9</string>
    <string name="noPosition">【自动获取数据】没有获取到想要的位置</string>
    <string name="positionURL">【自动获取数据】链接：http://api.map.baidu.com/geocoder?location=</string>
    <string name="positionURL2"><![CDATA[&output=html 地址：]]></string>
    <string name="networkError">您的网络出错啦！</string>
    <string name="KEYError">API KEY 错误，请检查！</string>

</resources>
